--- a/package.json
+++ b/package.json
@@ -7,20 +7,29 @@
   "scripts": {
     "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js",
     "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js --recursive ./test",
-    "test:watch": "npm run test -- --watch"
+    "test:watch": "npm run test -- --watch",
+    "lint": "yarn eslint -- .",
+    "lint:fix": "yarn lint -- --fix"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "babel-core": "^6.26.0",
+    "babel-eslint": "8.0.2",
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "chai": "^4.1.2",
     "chai-jquery": "^2.0.0",
+    "eslint": "4.10.0",
+    "eslint-config-last": "0.0.3",
+    "eslint-config-prettier": "2.7.0",
+    "eslint-plugin-prettier": "2.3.1",
+    "eslint-plugin-react": "7.4.0",
     "jquery": "^3.2.1",
     "jsdom": "^11.3.0",
     "mocha": "^4.0.1",
+    "prettier": "1.8.2",
     "react-addons-test-utils": "^15.6.2",
     "webpack": "^3.8.1",
     "webpack-dev-server": "^2.9.4"
